--- a/README
+++ b/README
@@ -5,8 +5,8 @@ A Lisp evaluator in Lisp.
 
 == What's this
 
-This is a Lisp evaluator for Zick's Lisp implementations. It supports 24
-implementations as of 2014-06-15 JST.
+This is a Lisp evaluator for Zick's Lisp implementations. It supports 32
+implementations as of 2014-07-06 JST.
 - ScratchLisp: http://scratch.mit.edu/projects/18997849/
 - LuaLisp: https://github.com/zick/LuaLisp
 - PyLisp: https://github.com/zick/PyLisp
@@ -31,6 +31,14 @@ implementations as of 2014-06-15 JST.
 - DLisp: https://github.com/zick/DLisp
 - JavaLisp: https://github.com/zick/JavaLisp
 - C#Lisp: https://github.com/zick/CSharpLIsp
+- HaxeLisp: https://github.com/zick/HaxeLisp
+- F#Lisp: https://github.com/zick/FSharpLIsp
+- KotlinLisp: https://github.com/zick/KotlinLIsp
+- JuliaLisp: https://github.com/zick/JuliaLisp
+- ScalaLisp: https://github.com/zick/ScalaLisp
+- LiveLisp: https://github.com/zick/LiveLisp
+- EiffeLisp: https://github.com/zick/EiffeLisp
+- SmalltalkLisp: https://github.com/zick/SmalltalkLisp
 
 It consists of QUOTE, IF, LAMBDA, DEFUN, SETQ, CAR, CDR, CONS, EQ, ATOM, +, *,
 -, /, and MOD. It provides them all, so it can run itself recursively.
