--- a/README
+++ b/README
@@ -5,8 +5,8 @@ A Lisp evaluator in Lisp.
 
 == What's this
 
-This is a Lisp evaluator for Zick's Lisp implementations. It supports 32
-implementations as of 2014-07-06 JST.
+This is a Lisp evaluator for Zick's Lisp implementations. It supports 42
+implementations as of 2014-08-02 JST.
 - ScratchLisp: http://scratch.mit.edu/projects/18997849/
 - LuaLisp: https://github.com/zick/LuaLisp
 - PyLisp: https://github.com/zick/PyLisp
@@ -39,6 +39,16 @@ implementations as of 2014-07-06 JST.
 - LiveLisp: https://github.com/zick/LiveLisp
 - EiffeLisp: https://github.com/zick/EiffeLisp
 - SmalltalkLisp: https://github.com/zick/SmalltalkLisp
+- IconLisp: https://github.com/zick/IconLisp
+- Oberon2Lisp: https://github.com/zick/Oberon2Lisp
+- SquirreLisp: https://github.com/zick/SquirreLisp
+- DylanLisp: https://github.com/zick/DylanLisp
+- IokeLisp: https://github.com/zick/IokeLisp
+- ElangLisp: https://github.com/zick/ElangLisp
+- PikeLisp: https://github.com/zick/PikeLisp
+- ProcessingLisp: https://github.com/zick/ProcessingLisp
+- OzLisp: https://github.com/zick/OzLisp
+- BooLisp: https://github.com/zick/BooLisp
 
 It consists of QUOTE, IF, LAMBDA, DEFUN, SETQ, CAR, CDR, CONS, EQ, ATOM, +, *,
 -, /, and MOD. It provides them all, so it can run itself recursively.
